# vwx-engine

./: pyproject.toml
vwx/: exceptions.py  load_utils.py  structs.py
vwx/data/: build_aircraft.py  build_navaids.py  build_stations.py  mappers.py
vwx/data/files/: aircraft.json
vwx/parsing/: core.py  remarks.py  speech.py  summary.py
vwx/parsing/sanitization/: base.py  metar.py  pirep.py  taf.py
vwx/parsing/sanitization/cleaners/: base.py  cleaners.py  cloud.py  joined.py  remove.py  replace.py  separated.py  visibility.py  wind.py
vwx/parsing/translate/: base.py  metar.py  remarks.py  taf.py
vwx/service/: __init__.py  base.py  bulk.py  files.py  scrape.py
vwx/static/: airsigmet.py  core.py  gfs.py  glossary.py  notam.py
vwx/station/: __init__.py  meta.py  search.py  station.py
