[tool.poetry]
name = "vwx-engine"
version = "0.1.0"
description = ""
authors = ["Luca <luca@ahd-creative.agency>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geopy = "^2.4.1"
httpx = "^0.27.0"
python-dateutil = "^2.9.0.post0"
xmltodict = "^0.13.0"
rapidfuzz = "^3.8.1"
scipy = "^1.13.0"
shapely = "^2.0.3"

[tool.poetry.extras]
all = ["rapidfuzz", "scipy", "shapely"]
fuzz = ["rapidfuzz"]
scipy = ["scipy"]
shape = ["shapely"]

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
nox = "*"
pdoc = "*"
poethepoet = "*"
pre-commit = "*"
pylint = "*"
pyroma = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-github-actions-annotate-failures = "*"
pyupgrade = "*"
time-machine = "*"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = """\
    --cov vwx \
    --cov tests \
    --cov-report term-missing \
    --no-cov-on-fail \
"""

[tool.coverage.run]
omit = [
    "*airep.py",
    "*glossary.py",
    "vwx/data/*",
    "tests/*",
]

[tool.coverage.report]
fail_under = 89  # increase over time
exclude_lines = [
    'if TYPE_CHECKING:',
    'pragma: no cover'
]

[tool.mypy]
disallow_any_unimported = false
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
check_untyped_defs = true
show_error_codes = true